# Curse-of-the-Mites

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  foo.py  main.py  pyproject.toml  tox.ini
.github/workflows/: lint.yaml
client/: available_commands.py  console.py  entities.py  main.py  map.py  pyproject.toml  test.py  test_server.py  websocket_app.py
common/: pyproject.toml
common/common/: __init__.py  schemas.py  serialization.py
game_components/entitiies/: entity.py  mob.py  player.py
game_components/rooms/: basic_room.py
public/: index.html
server/: main.py  mess_up_actions.py  pyproject.toml  schemas.py
server/game_components/: game.py  game_objects.py
server/game_components/actions/: action.py
server/game_components/data/: data.py
server/game_components/entities/: entity.py  mob.py  player.py
server/game_components/entitiies/: entity.py  mob.py  player.py
server/game_components/rooms/: basic_room.py  type_of_rooms.py
web/: index.ts  package-lock.json  package.json  tsconfig.json
