[tool.poetry]
name = "Name"
version = "0.1.0"
description = ""
authors = ["Author 1 <email@mail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.10.*"
pycryptodome = "^3.15.0"
setuptools = "^63.2.0"
cryptography = "^37.0.4"

[tool.poetry.dev-dependencies]
# Base tools
flake8 = "~4.0.1"
isort = "~5.10.1"
pre-commit = "~2.17.0"

# Flake8 plugins, see https://github.com/python-discord/code-jam-template/tree/main#plugin-list
flake8-docstrings = "~1.6.0"
black = "^22.6.0"


[build-system]
requires = ["setuptools","poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"
