[tool.poetry]
name = "client"
version = "0.1.0"
description = ""
authors = ["AbooMinister25 <aboominister@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
textual = "^0.1.18"
websockets = "^10.3"
# "develop" just means that no need to reinstall deps to get changes
common = { path = "../common/", develop = true }

[tool.poetry.dev-dependencies]
# Base tools
flake8 = "~4.0.1"
isort = "~5.10.1"
pre-commit = "~2.17.0"

# Flake8 plugins, see https://github.com/python-discord/code-jam-template/tree/main#plugin-list
flake8-docstrings = "~1.6.0"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
