[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["AbooMinister25 <aboominister@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pycryptodome = "^3.15.0"
cryptography = "^37.0.4"
websockets = "^10.3"
# "develop" just means that no need to reinstall deps to get changes
common = { path = "../common/", develop = true }

[tool.poetry.dev-dependencies]
# Base tools
flake8 = "~4.0.1"
isort = "~5.10.1"
pre-commit = "~2.17.0"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
